[gd_scene load_steps=5 format=3 uid="uid://bg3td5wm57x30"]

[ext_resource type="Script" path="res://Scenes/Placeables/Tower.gd" id="1_f5ojo"]
[ext_resource type="PackedScene" uid="uid://cnpk6ul0cvh8u" path="res://Scenes/Bullet/bullet.tscn" id="2_cxm3t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m5yg"]
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_cqd0d"]
radius = 200.0

[node name="Tower" type="StaticBody2D"]
z_index = 4
script = ExtResource("1_f5ojo")
bullet_scene = ExtResource("2_cxm3t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7m5yg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(1, 0.376471, 0.168627, 1)

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BulletStorage" type="Node" parent="."]

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource("CircleShape2D_cqd0d")

[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
